--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             trackUserInteractions: true,
             trackResources: true,
             trackLongTasks: true,
+            trackSessionAcrossSubdomains: true,
             defaultPrivacyLevel: 'mask-user-input',
         });
     </script>
